updated project README

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
-        </ul> <li>The head element contains information about the webpage.</li>
+          <li>HTML is made up of elements. Elements are different types of content on webpages.</li>
+         <li>The head element contains information about the webpage.</li>
         <li>The body element represents the visible content shown to the user.</li>
       </section>
    
